# color-map

./: .gitmodules  CMakeLists.txt  README.md  compile_flags.txt
src/: main.cpp
